--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 html, body {
     margin: 20px;
+    background: #000;
+    color: #fff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
